==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

v6.1.0 Nov 26 2014
. (gazelle) Added "export" sub-command to generate csv files of the current database
. (kfsone) Made the update-gui significantly more user friendly.

v6.0.7 Nov 26 2014
. (kfsone) Removed 'pill' options from local command
. (kfsone) Friendly message instead of crash when local finds no stars
. (kfsone) Added "--ignore-unkown" (-i) to "import"
. (kfsone) "import" without a filename will now present an open file dialog
API:
. (kfsone) You can now have optional positional arguments in command lines

v6.0.6 Nov 25 2014
. (kfsone) Issue#63 Trade calculator was not seeing some non-trade jumps
. (maddavo/kfsone) Import of ~20,000 systems
. (kfsone) GUI tweaks
. (kfsone) Station cleanup
. (kfsone) Various new stations
. (kfsone) Various minor bug fixes

v6.0.5 Nov 22 2014 (w/Gamma 1)
. (kfsone) Added "import" sub-command for loading 1+ stations from a file
. (kfsone) Added "--height" (-H) option to update GUI
. (kfsone) Added "--front" (-F) to keep the update gui infront of TD
. (kfsone) Added Pilot's Federation/Jameson Memorial
. (kfsone) Added '--ignore-unknown' option to buildcache

v6.0.4 Nov 21 2014 (Beta 3.9.1)
. (kfsone) Added "sell" command (find places to sell a specific item)
. (kfsone) Reactive Armor changed to Reactive Armour
. (kfsone) Added 'Chemical Waste'
. (kfsone) Update GUI now consistently selects text on entering a cell
. (kfsone) Update GUI now selects the first column of the first line on startup
. (kfsone) Update GUI now supports up/down key inputs and has a default size
. (kfsone) Issue#57 Fixed extra cache rebuilds after doing an 'update'
. (kfsone) Changing .prices won't force a full rebuild of the cache
. (kfsone) Better integrated update gui (improved startup times)