@@ -76,5 +76,8 @@ if __name__ == "__main__":
             main(sys.argv)
     except tradeexcept.TradeException as e:
         print("%s: %s" % (sys.argv[0], str(e)))
+        import os
+        if 'EXCEPTIONS' in os.environ:
+            raise e
         sys.exit(1)
 
