@@ -5,6 +5,7 @@ TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
 v6.1.0 Nov 26 2014
 . (gazelle) Added "export" sub-command to generate csv files of the current database
 . (kfsone) Made the update-gui significantly more user friendly.
+. (kfsone) Handle cases where .prices file is missing, e.g. bootstrap
 
 v6.0.7 Nov 26 2014
 . (kfsone) Removed 'pill' options from local command
